unpackaged/main/default/objects/Contact/fields/Retool_Editor_Type__c.field-meta.xml
<CustomField>
    <fullName>Retool_Editor_Type__c</fullName>
    <description>Active Power Editor: 60+ app saves/month in the last 90 days || 180+ total app saves in the last 90 days
Active Editor: 1+ app saves/month in the last 90 days
Inactive Power Editor: 60+ average app saves/month in the last 2 years
Inactive Editor: 10+ average app saves/month in the last 2 years

Link to Polytomic Model: https://app.polytomic.com/models/ef9214f1-27ce-408e-b3d6-b1b6e8340fc2</description>
    <inlineHelpText>Active Power Editor: 60+ app saves/month in the last 90 days || 180+ total app saves in the last 90 days
Active Editor: 1+ app saves/month in the last 90 days
Inactive Power Editor: 60+ average app saves/month in the last 2 years
Inactive Editor: 10+ average app saves/month in the last 2 years</inlineHelpText>
    <label>Retool Editor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Power Editor</fullName>
            </value>
            <value>
                <fullName>Active Editor</fullName>
            </value>
            <value>
                <fullName>Inactive Power Editor</fullName>
            </value>
            <value>
                <fullName>Inactive Editor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>