unpackaged/main/default/objects/Contact/fields/Sendoso_Total_Spent_On_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sendoso_Total_Spent_On_Contact__c</fullName>
    <description>Total $ amount spent on Contact through Sendoso.</description>
    <inlineHelpText>Total $ amount spent on Contact through Sendoso.</inlineHelpText>
    <label>Sendoso: Total $ Spent On Contact</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>