unpackaged/main/default/objects/Contact/fields/Slack_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_ID__c</fullName>
    <description>Slack ID of a contact used by the Centro Integration for the support use case</description>
    <externalId>true</externalId>
    <label>Slack ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>