unpackaged/main/default/objects/Contact/fields/Slack_Username__c.field-meta.xml
<CustomField>
    <fullName>Slack_Username__c</fullName>
    <description>Used with the Centro integration for support to identify ticket submitters</description>
    <externalId>true</externalId>
    <label>Slack Username</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>