unpackaged/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Unverified&quot;</defaultValue>
    <label>zOLDStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Resting</fullName>
            </value>
            <value>
                <fullName>Ignore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>