unpackaged/main/default/objects/Contact/fields/Suppression_Reason__c.field-meta.xml
<CustomField>
    <fullName>Suppression_Reason__c</fullName>
    <description>Reason why something was moved to Trash status</description>
    <label>Suppression Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junk Data</fullName>
            </value>
            <value>
                <fullName>Email Hard Bounce</fullName>
            </value>
            <value>
                <fullName>No longer at company</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
                <isActive>false</isActive>
                <label>Competitor</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Not a good company fit</fullName>
                <isActive>false</isActive>
                <label>Not a good company fit</label>
            </value>
            <value>
                <fullName>Not the right person</fullName>
                <isActive>false</isActive>
                <label>Not the right person</label>
            </value>
            <value>
                <fullName>Outside Core Geo&#39;s</fullName>
                <isActive>false</isActive>
                <label>Outside Core Geo&#39;s</label>
            </value>
            <value>
                <fullName>Responded Negatively</fullName>
                <isActive>false</isActive>
                <label>Responded Negatively</label>
            </value>
            <value>
                <fullName>Retool Employee</fullName>
                <isActive>false</isActive>
                <label>Retool Employee</label>
            </value>
            <value>
                <fullName>Sticking with Free plan (Self-serve target)</fullName>
                <isActive>false</isActive>
                <label>Sticking with Free/Cloud Plan</label>
            </value>
            <value>
                <fullName>Unsubscribed/Do Not Contact</fullName>
                <isActive>false</isActive>
                <label>Unsubscribed/Do Not Contact</label>
            </value>
            <value>
                <fullName>Use case not good fit</fullName>
                <isActive>false</isActive>
                <label>Use case not good fit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>