unpackaged/main/default/objects/Contact/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <formula>IF(
  ISBLANK(Most_Recent_Event_Webinar_Registration__c), &quot;Blank&quot;, &quot;Has Value&quot;
) &amp; &quot; | &quot; &amp;
IF(
  ISBLANK(Most_Recent_Retool_Sign_Up_Date__c), &quot;Blank&quot;, &quot;Has Value&quot;
) &amp; &quot; | &quot; &amp;
IF(
  ISBLANK(Current_Open_Journey__c), &quot;Blank&quot;, &quot;Has Value&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>test</label>
    <type>Text</type>
</CustomField>