unpackaged/main/default/objects/Contact/fields/Title_Mapping_Method__c.field-meta.xml
<CustomField>
    <fullName>Title_Mapping_Method__c</fullName>
    <defaultValue>&quot;Automatic&quot;</defaultValue>
    <description>Enables/disables automatic calculations of Function/Seniority values. Setting the value to &#39;Manual&#39; enables overrides.</description>
    <inlineHelpText>Enables/disables automatic calculations of Function/Seniority values. Setting the value to &#39;Manual&#39; enables overrides.</inlineHelpText>
    <label>Title Mapping Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>