unpackaged/main/default/objects/Contact/fields/Trigger__c.field-meta.xml
<CustomField>
    <fullName>Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to trigger record update automations.</description>
    <inlineHelpText>Used to trigger record update automations.</inlineHelpText>
    <label>Trigger</label>
    <type>Checkbox</type>
</CustomField>