unpackaged/main/default/objects/Contact/fields/UniqueEntry__Lead_Dupes_Ignored__c.field-meta.xml
<CustomField>
    <fullName>UniqueEntry__Lead_Dupes_Ignored__c</fullName>
    <description>If a record is created with RingLead Unique Entry, this field will reflect the number of possible duplicate Leads that were presented to the user at the time they created it.</description>
    <label>Lead Dupes Ignored</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>