unpackaged/main/default/objects/Contact/fields/View_in_Outreach__c.field-meta.xml
<CustomField>
    <fullName>View_in_Outreach__c</fullName>
    <description>Link to Outreach Prospect record.

External Systems Utilization: Outreach</description>
    <formula>IF(
 ISBLANK(Outreach_Prospect_ID__c),
 &quot;Not available&quot;,
  HYPERLINK(&quot;https://app1e.outreach.io/prospects/&quot;&amp;Outreach_Prospect_ID__c&amp;&quot;/overview&quot;, &quot;Link&quot;,&quot;_blank&quot;)
 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Link to Outreach Prospect record.</inlineHelpText>
    <label>View in Outreach</label>
    <type>Text</type>
</CustomField>