unpackaged/main/default/objects/Contact/fields/ZoomInfo_Address__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Address__c</fullName>
    <description>Address fields populated by ZoomInfo so misaligned Country/State values can be manipulated prior to updating our standard Address fields.

External Systems Utilization: ZoomInfo</description>
    <inlineHelpText>Address fields populated by ZoomInfo.</inlineHelpText>
    <label>ZoomInfo Address</label>
    <type>Address</type>
</CustomField>