unpackaged/main/default/objects/Contact/fields/ZoomInfo_Company_Employees__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Company_Employees__c</fullName>
    <description>Company Employee count enriched by ZoomInfo. Used in Contact - After Save flow to enrich company information and automatically move contact records to the correct Accounts.

External Systems Utilization: ZoomInfo</description>
    <inlineHelpText>Company Employee count enriched by ZoomInfo. Used in Contact - After Save flow to enrich company information and automatically move contact records to the correct Accounts.</inlineHelpText>
    <label>ZoomInfo Company Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>