unpackaged/main/default/objects/Contact/fields/ZoomInfo_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Company_Name__c</fullName>
    <description>Company Name enriched by ZoomInfo. Used in Contact - After Save flow to enrich company information and automatically move contact records to the correct Accounts.

External Systems Utilization: ZoomInfo</description>
    <inlineHelpText>Company Name enriched by ZoomInfo. Used in Contact - After Save flow to enrich company information and automatically move contact records to the correct Accounts.</inlineHelpText>
    <label>ZoomInfo Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>