unpackaged/main/default/objects/Contact/fields/ZoomInfo_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Job_Function__c</fullName>
    <description>Job Function enriched by ZoomInfo.

External Systems Utilization: ZoomInfo</description>
    <inlineHelpText>Job Function enriched by ZoomInfo.</inlineHelpText>
    <label>ZoomInfo Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>