unpackaged/main/default/objects/Contact/fields/ZoomInfo_Street__c.field-meta.xml
<CustomField>
    <fullName>ZoomInfo_Street__c</fullName>
    <description>Address fields populated by ZoomInfo so misaligned Country/State values can be manipulated prior to updating our standard Address fields. 

External Systems Utilization: ZoomInfo</description>
    <inlineHelpText>Address fields populated by ZoomInfo so misaligned Country/State values can be manipulated prior to updating our standard Address fields.</inlineHelpText>
    <label>ZoomInfo Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>