unpackaged/main/default/objects/Contact/validationRules/Require_NurtureReason_for_Nurture_Cont.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_NurtureReason_for_Nurture_Cont</fullName>
    <active>false</active>
    <description>Requires Nurture Reason to be selected if Contact Status is Nurture</description>
    <errorConditionFormula>AND(
ISPICKVAL( Contact_Status__c , &#39;Nurture&#39;),
ISBLANK(TEXT(Nurture_Reason__c))
)</errorConditionFormula>
    <errorMessage>You have to specify a Nurture Reason</errorMessage>
</ValidationRule>