unpackaged/main/default/objects/Contact/validationRules/Require_Trash_Reason_for_Trashed_Contact.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Trash_Reason_for_Trashed_Contact</fullName>
    <active>false</active>
    <description>Requires you to specify a trash reason for a trashed contact</description>
    <errorConditionFormula>AND(
ISPICKVAL( Contact_Status__c , &#39;Trash&#39;),
ISBLANK(TEXT(Suppression_Reason__c))
)</errorConditionFormula>
    <errorMessage>You must specify a Trash Reason</errorMessage>
</ValidationRule>