unpackaged/main/default/objects/Contact/listViews/ChampifyIo__Champify_Warm_Leads_Past_30_Days.listView-meta.xml
<ListView>
    <fullName>ChampifyIo__Champify_Warm_Leads_Past_30_Days</fullName>
    <columns>Outreach_Status__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ChampifyIo__Champify_Persona__c</columns>
    <columns>ChampifyIo__Champify_Job_Started_Date__c</columns>
    <columns>ChampifyIo__Past_Contact__c</columns>
    <columns>ChampifyIo__Past_Account__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ChampifyIo__Is_a_Champify__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Champify Arrivals (Contacts)</label>
</ListView>