unpackaged/main/default/objects/Contact/listViews/ChampifyIo__My_Champify_Arrivals_2023.listView-meta.xml
<ListView>
    <fullName>ChampifyIo__My_Champify_Arrivals_2023</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND (5 OR 6)</booleanFilter>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>ChampifyIo__Champify_Persona__c</columns>
    <columns>ChampifyIo__Past_Account__c</columns>
    <columns>ChampifyIo__Past_Contact__c</columns>
    <columns>ChampifyIo__GetIntroFrom__c</columns>
    <columns>ChampifyIo__LinkedIn_URL__c</columns>
    <columns>ChampifyIo__Champify_Job_Started_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ChampifyIo__Is_a_Champify__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Suppression_Reason__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Outreach_Actively_Being_Sequenced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Opt_Out_Sales__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </filters>
    <filters>
        <field>Outreach_Status__c</field>
        <operation>equals</operation>
        <value>Cold / Not Started</value>
    </filters>
    <filters>
        <field>Outreach_Status__c</field>
        <operation>equals</operation>
    </filters>
    <label>[SALES] My Champify Arrivals - NEW</label>
</ListView>