unpackaged/main/default/objects/Contact/listViews/My_Contacts.listView-meta.xml
<ListView>
    <fullName>My_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Outreach_Status__c</columns>
    <columns>Contact_Status__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>6/1/2022 12:00 AM</value>
    </filters>
    <label>My Contacts</label>
</ListView>