unpackaged/main/default/objects/Contact/listViews/My_Recently_Added_Contacts_To_Be_Added.listView-meta.xml
<ListView>
    <fullName>My_Recently_Added_Contacts_To_Be_Added</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Outreach_Status__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Contact_Status__c</columns>
    <columns>Lead_Source_Detail__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <filters>
        <field>Outreach_Actively_Being_Sequenced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Outreach_Status__c</field>
        <operation>notEqual</operation>
        <value>Meeting Booked,Do Not Contact,Bad Contact Info,Replied,Added to Sequence,Approaching</value>
    </filters>
    <label>SDR: My New Added Contacts (To Sequence)</label>
</ListView>