unpackaged/main/default/objects/Contact/listViews/Recently_Created.listView-meta.xml
<ListView>
    <fullName>Recently_Created</fullName>
    <columns>CONTACT.CREATED_DATE</columns>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Outreach_Status__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>Contact_Status__c</columns>
    <columns>Lead_Source_Detail__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <filters>
        <field>Outreach_Actively_Being_Sequenced__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>*Recently Created</label>
</ListView>