unpackaged/main/default/objects/Contact/listViews/Recently_Created_Modified.listView-meta.xml
<ListView>
    <fullName>Recently_Created_Modified</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.LAST_UPDATE</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <filters>
        <field>CONTACT.LAST_UPDATE</field>
        <operation>greaterOrEqual</operation>
        <value>LAST_N_WEEKS:2</value>
    </filters>
    <label>*Recently Created/Modified</label>
</ListView>