unpackaged/main/default/objects/Contact/listViews/Regie_ai_EXCLUSION.listView-meta.xml
<ListView>
    <fullName>Regie_ai_EXCLUSION</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Regie_ai_Exclusion__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Regie.ai - EXCLUSION</label>
</ListView>