unpackaged/main/default/objects/Contact/listViews/Regie_ai_Manufacturing.listView-meta.xml
<ListView>
    <fullName>Regie_ai_Manufacturing</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_ICP_Type__c</field>
        <operation>equals</operation>
        <value>Manufacturing</value>
    </filters>
    <filters>
        <field>Regie_ai_Exclusion__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>equals</operation>
        <value>it manager,it specialist,coo,cto,cio</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>architect,analyst,application,database admin,data,technical specialist,backend,engineer,devops,supply chain,program manager,project manager,distribution manager,data scientist,it systems,software development,operations</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notContain</operation>
        <value>junior,student,contractor,intern,front end,frontend,ui</value>
    </filters>
    <label>Regie.ai - Manufacturing</label>
</ListView>