unpackaged/main/default/objects/Contact/listViews/Regie_ai_Non_Tech.listView-meta.xml
<ListView>
    <fullName>Regie_ai_Non_Tech</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_ICP_Type__c</field>
        <operation>equals</operation>
        <value>Non-Tech</value>
    </filters>
    <filters>
        <field>Regie_ai_Exclusion__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>contains</operation>
        <value>integration manager,application architect</value>
    </filters>
    <filters>
        <field>CONTACT.TITLE</field>
        <operation>notContain</operation>
        <value>junior,student,contractor,intern,front end,frontend,ui</value>
    </filters>
    <label>Regie.ai - Non-Tech</label>
</ListView>