unpackaged/main/default/objects/Contact/listViews/SDR_Accepted_Journeys.listView-meta.xml
<ListView>
    <fullName>SDR_Accepted_Journeys</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>Outreach_Actively_Being_Sequenced__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Current_Journey_Stage__c</field>
        <operation>equals</operation>
        <value>Accepted</value>
    </filters>
    <filters>
        <field>Opt_Out_Sales__c</field>
        <operation>notEqual</operation>
        <value>True</value>
    </filters>
    <filters>
        <field>Suppression_Reason__c</field>
        <operation>equals</operation>
    </filters>
    <label>[SDR] My Accepted Journeys</label>
</ListView>