unpackaged/main/default/objects/Contact/listViews/SDR_Champify_New_Arrivals.listView-meta.xml
<ListView>
    <fullName>SDR_Champify_New_Arrivals</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>ChampifyIo__Champify_Persona__c</columns>
    <columns>Outreach_Status__c</columns>
    <columns>Outreach_Actively_Being_Sequenced__c</columns>
    <columns>Current_Open_Journey__c</columns>
    <columns>Outreach_Current_Sequence_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ChampifyIo__Champify_Persona__c</field>
        <operation>startsWith</operation>
        <value>New Arrival:</value>
    </filters>
    <filters>
        <field>Current_Open_Journey__c</field>
        <operation>equals</operation>
    </filters>
    <label>[SDR] Champify: New Arrivals</label>
</ListView>